
   * ``bzr pack`` now orders revision texts in topological order, with newest
     at the start of the file, promoting linear reads for ``bzr log`` and the
     like. This partially fixes #154129. (Robert Collins)

   * Merge directives now fetch prerequisites from the target branch if
     needed.  (Aaron Bentley)

   * ``reconfigure`` can now convert from repositories.  (Aaron Bentley)

  BUGFIXES:

   * Fix Makefile rules for doc generation. (Ian Clatworthy, #175207)

   * Transform failures no longer cause ImmortalLimbo errors (Aaron Bentley,
     #137681)

   * ``uncommit`` works even when the commit messages of revisions to be
     removed use characters not supported in the terminal encoding.
     (Aaron Bentley)

   * When dumb http servers return whole files instead of the requested ranges,
     read the remaining bytes by chunks to avoid overflowing network buffers.
     (Vincent Ladeuil, #175886)

   * ``reconfigure`` is able to convert trees into lightweight checkouts.
     (Aaron Bentley)

  INTERNALS:

  API BREAKS:

  TESTING:


bzr 1.0 2007-12-14
==================

  DOCUMENTATION:

   * More improvements and fixes to the User Guide.  (Ian Clatworthy)

   * Add information on cherrypicking/rebasing to the User Guide.
     (Ian Clatworthy)

   * Improve bug tracker integration documentation. (Ian Clatworthy)

   * Minor edits to ``Bazaar in five minutes`` from David Roberts and
     to the rebasing section of the User Guide from Aaron Bentley.
     (Ian Clatworthy)


bzr 1.0rc3 2007-12-11
=====================

  CHANGES:
   
   * If a traceback occurs, users are now asked to report the bug 
     through Launchpad (https://bugs.launchpad.net/bzr/), rather than 
     by mail to the mailing list.
     (Martin Pool)

  BUGFIXES:

   * Fix Makefile rules for doc generation. (Ian Clatworthy, #175207)

   * Give more feedback during long http downloads by making readv deliver data