@@ -22,6 +22,9 @@ IN DEVELOPMENT
 
    * ``reconfigure`` can now convert from repositories.  (Aaron Bentley)
 
+   * ``split`` now supported, to enable splitting large trees into smaller
+     pieces.
+
   BUGFIXES:
 
    * Fix Makefile rules for doc generation. (Ian Clatworthy, #175207)
